Change the Email

--- a/Contact Me.html
+++ b/Contact Me.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <form action="https://www.goldbet365.tn/fr/betting" method="post">  
+    <form action="mailto:hamatm852@gmail.com" method="post">  
         <label>Your Name:</label>
         <input type="text" name="" id=""><br><br>
         <label>Your Email:</label>
